Fixing Header backgroundColor on mobile

--- a/app/components/header/header.module.css
+++ b/app/components/header/header.module.css
@@ -69,7 +69,6 @@
 @media only screen and (max-width: 767px) {
   .header {
     padding: 0 20px;
-    background-color: rgba(0, 0, 0, 0.9);
     height: 80px;
   }
 
